レスポンシブ対応

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!--
+        レスポンシブの設定
+        ・viwportの設定
+    -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- このサイトは何か　説明する場所　-->
     <meta name="description" content="テック太郎の自己紹介">
@@ -18,11 +22,11 @@
         　・hiタグaタグspanタグを使って行きます。
     　-->
     <header>
-        <hi class="block-header">
+        <h1 class="block-header">
             <a href="">
                 <span class="color-green">P</span>ortfolio
             </a>
-        </hi>
+        </h1>
     </header>
 
     <!--
